fixed media queries on mobile sizes v.2

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 #container {
     margin: auto;
     width: 35%;
-    height: 50%;
+    min-height: 50%;
     text-align: center;
     background-color: rgba(255, 254, 254, 0.4);
     border-radius: 1rem;
@@ -44,7 +44,7 @@ h3 {
 #atilas-container {
     margin: 3rem 1rem;
     border: 3px solid black;
-    height: 6rem;
+    min-height: 6rem;
 }
 
 .atilas {
@@ -113,7 +113,12 @@ footer {
     .atilas {
         font-size: 2.4rem;
         letter-spacing: 0.1rem;
+    }
 
+
+    #atilas-container {
+        margin: 2rem 1rem;
+        min-height: 4rem;
     }
 }
 
@@ -137,12 +142,12 @@ footer {
     }
 
     #atilas-container {
-        margin: 2rem 1rem;
+        margin: 1rem 1rem;
         padding: 0.6rem 0;
-        height: 3rem;
+        height: 2rem;
     }
 
     #container {
-        height: 45%;
+        height: 50%;
     }
 }
